<resources>
	<string name="app_name">用户登录</string>
	<string name="name_tag">姓名</string>
	<string name="name_hint">请输入姓名</string>
	<string name="passwd_tag">密码</string>
	<string name="passwd_hint">请输入密码</string>
	<string name="login_btn">登录</string>
	<string name="signup_btn">注册</string>
	<string name="female_radio">female</string>
	<string name="male_radio">male</string>
	<string name="version_msg">v1.0_1</string>
	<string name="btn3">count</string>
	<string name="TextView">Hello</string>
	<string name="pwd_Change">修改密码</string>
	<string name="pwd_new">新密码</string>
	<string name="new_pwd">请输入新密码</string>
	<string name="confirm">确认</string>
	<string name="changepwd_Title">修改密码</string>
	<string name="register_Title">注册</string>
	<string name="register_name">用户名</string>
	<string name="register_pwdConfirm">确认密码</string>
	<string name="register_nameHint">请输入用户名</string>
	<string name="gender_tag">性别</string>
	<string name="register_email">邮箱</string>
	<string name="register_emailHint">请输入邮箱</string>
	<string name="info_Change">修改信息</string>
	<string name="register_PhoneTag">电话</string>
	<string name="register_PhoneHint">请输入手机号</string>
	<string name="changedInfo_Name">用户名</string>
</resources>
