<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="114dp">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dp"
			android:layout_height="74dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/app_name"
			android:textAlignment="center"
			android:textSize="24sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="306dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:layout_weight="1"
			android:text="@string/name_tag"
			android:textAlignment="center"
			android:gravity="center"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/editText"
			android:layout_width="wrap_content"
			android:layout_height="69dp"
			android:layout_weight="1"
			android:ems="10"
			android:hint="@string/name_hint"
			android:inputType="textPersonName"
			android:importantForAutofill="no" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:layout_weight="1"
			android:text="@string/passwd_tag"
			android:textAlignment="center"
			android:gravity="center"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/editText4"
			android:layout_width="wrap_content"
			android:layout_height="69dp"
			android:layout_weight="1"
			android:ems="10"
			android:hint="@string/passwd_hint"
			android:inputType="textPassword"
			android:importantForAutofill="no" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"

		android:gravity="right">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/signup_btn"
			android:textAlignment="center"
			android:gravity="right"
			/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_btn"
			android:textAlignment="center"
			android:gravity="right"
			/>
	</LinearLayout>


</LinearLayout>