<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Register">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline16"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.1" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline17"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.2" />

	<TextView
		android:id="@+id/register_Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_Title"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline16"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/register_nameTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_name"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline17"
		app:layout_constraintEnd_toStartOf="@+id/guideline18"
		app:layout_constraintStart_toStartOf="@+id/guideline18"
		app:layout_constraintTop_toTopOf="@+id/guideline16" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline18"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.15" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline19"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.6" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline20"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.30369356" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline21"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.4" />

	<TextView
		android:id="@+id/register_pwdTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/passwd_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline20"
		app:layout_constraintEnd_toStartOf="@+id/guideline18"
		app:layout_constraintStart_toStartOf="@+id/guideline18"
		app:layout_constraintTop_toTopOf="@+id/guideline17" />

	<TextView
		android:id="@+id/register_pwdConfirmTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_pwdConfirm"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline21"
		app:layout_constraintEnd_toStartOf="@+id/guideline18"
		app:layout_constraintStart_toStartOf="@+id/guideline18"
		app:layout_constraintTop_toTopOf="@+id/guideline20"
		app:layout_constraintVertical_bias="0.487" />

	<EditText
		android:id="@+id/register_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/register_nameHint"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline17"
		app:layout_constraintEnd_toStartOf="@+id/guideline19"
		app:layout_constraintStart_toStartOf="@+id/guideline19"
		app:layout_constraintTop_toTopOf="@+id/guideline16" />

	<EditText
		android:id="@+id/register_pwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/passwd_hint"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@+id/guideline20"
		app:layout_constraintEnd_toStartOf="@+id/guideline19"
		app:layout_constraintStart_toStartOf="@+id/guideline19"
		app:layout_constraintTop_toTopOf="@+id/guideline17" />

	<EditText
		android:id="@+id/register_pwdConfirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/register_pwdConfirm"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@+id/guideline21"
		app:layout_constraintEnd_toStartOf="@+id/guideline19"
		app:layout_constraintStart_toStartOf="@+id/guideline19"
		app:layout_constraintTop_toTopOf="@+id/guideline20" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline22"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/gender_Tag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/gender_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline22"
		app:layout_constraintEnd_toStartOf="@+id/guideline18"
		app:layout_constraintStart_toStartOf="@+id/guideline18"
		app:layout_constraintTop_toTopOf="@+id/guideline21" />

	<RadioGroup
		android:id="@+id/register_Gender_RG"
		android:layout_width="144dp"
		android:layout_height="64dp"
		android:layout_marginStart="76dp"
		app:layout_constraintBottom_toTopOf="@+id/guideline22"
		app:layout_constraintStart_toEndOf="@+id/gender_Tag"
		app:layout_constraintTop_toTopOf="@+id/guideline21"
		app:layout_constraintVertical_bias="0.333">

		<RadioButton
			android:id="@+id/register_male_RB"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/male_radio" />

		<RadioButton
			android:id="@+id/register_female_RB"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/female_radio" />
	</RadioGroup>

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline23"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.55" />

	<Button
		android:id="@+id/register_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confirm"
		app:layout_constraintBottom_toTopOf="@+id/guideline23"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline19"
		app:layout_constraintTop_toTopOf="@+id/guideline23" />

</androidx.constraintlayout.widget.ConstraintLayout>