<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".userInfo_Change">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline33"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.1" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline34"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.05" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline35"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.1" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline36"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.2" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline37"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.3" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline38"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.4" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline39"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/changed_Info_NameTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/changedInfo_Name"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline35"
		app:layout_constraintEnd_toStartOf="@+id/guideline40"
		app:layout_constraintStart_toStartOf="@+id/guideline33"
		app:layout_constraintTop_toTopOf="@+id/guideline35" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline40"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.4" />

	<TextView
		android:id="@+id/changed_Info_PasswdTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/passwd_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline36"
		app:layout_constraintEnd_toStartOf="@+id/guideline40"
		app:layout_constraintStart_toStartOf="@+id/guideline33"
		app:layout_constraintTop_toTopOf="@+id/guideline36" />

	<TextView
		android:id="@+id/changed_Info_PhoneTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_PhoneTag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline37"
		app:layout_constraintEnd_toStartOf="@+id/guideline40"
		app:layout_constraintStart_toStartOf="@+id/guideline33"
		app:layout_constraintTop_toTopOf="@+id/guideline37" />

	<TextView
		android:id="@+id/changed_Info_EmailTag"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_email"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline38"
		app:layout_constraintEnd_toStartOf="@+id/guideline40"
		app:layout_constraintStart_toStartOf="@+id/guideline33"
		app:layout_constraintTop_toTopOf="@+id/guideline38" />

	<EditText
		android:id="@+id/changed_Info_Name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/name_hint"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline35"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline40"
		app:layout_constraintTop_toTopOf="@+id/guideline35" />

	<EditText
		android:id="@+id/changed_Info_passwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/changepwd_Title"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline36"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline40"
		app:layout_constraintTop_toTopOf="@+id/guideline36" />

	<EditText
		android:id="@+id/changed_Info_Phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/register_PhoneHint"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline37"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline40"
		app:layout_constraintTop_toTopOf="@+id/guideline37" />

	<EditText
		android:id="@+id/changed_Info_Email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/register_emailHint"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline38"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline40"
		app:layout_constraintTop_toTopOf="@+id/guideline38" />

	<Button
		android:id="@+id/changed_Info_submit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confirm"
		app:layout_constraintBottom_toTopOf="@+id/guideline39"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.772"
		app:layout_constraintStart_toStartOf="@+id/guideline40"
		app:layout_constraintTop_toTopOf="@+id/guideline39"
		app:layout_constraintVertical_bias="0.333" />
</androidx.constraintlayout.widget.ConstraintLayout>