<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Change_pwd">

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="12dp"
		android:text="@string/passwd_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline12"
		app:layout_constraintEnd_toStartOf="@+id/guideline14"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline13"
		app:layout_constraintVertical_bias="0.482" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/pwd_new"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline11"
		app:layout_constraintEnd_toStartOf="@+id/guideline14"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline12"
		app:layout_constraintVertical_bias="0.606" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/name_tag"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline13"
		app:layout_constraintEnd_toStartOf="@+id/guideline14"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline10" />

	<EditText
		android:id="@+id/pwd_old"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/passwd_hint"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@+id/guideline12"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline13" />

	<EditText
		android:id="@+id/editText2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/name_hint"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/guideline13"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline10" />

	<EditText
		android:id="@+id/pwd_new"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/new_pwd"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@+id/guideline11"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline12" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline9"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.1" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline15"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.15" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline11"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.45" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.35" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline13"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.25" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline14"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.2" />

	<Button
		android:id="@+id/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confirm"
		app:layout_constraintBottom_toTopOf="@+id/guideline15"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.73"
		app:layout_constraintStart_toStartOf="@+id/guideline14"
		app:layout_constraintTop_toTopOf="@+id/guideline15"
		app:layout_constraintVertical_bias="0.312" />

	<TextView
		android:id="@+id/pwd_Change_Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/changepwd_Title"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline9"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>